--- a/Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
+++ b/Bike_Sharing_Demand_Prediction_Capstone_Project.ipynb
@@ -181,7 +181,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 310
         },
         "id": "O3kvD_rEZm9b",
         "outputId": "565c4a31-c960-4cbb-c68a-da1a75f4e4ba"
@@ -752,7 +752,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 310
+          "height": 327
         },
         "id": "PZGetA8TdTqW",
         "outputId": "894737af-964f-49e2-9291-a47224d5913e"
@@ -1397,7 +1397,7 @@
         "numeric_features = df.iloc[:,[2,3,4,5,6,7,8,9,10]]\n",
         "numeric_features.head()\n",
         "# numeric_features[:].head()\n",
-        "# plot a bar plot for each numerical feature count (except car_ID)\n",
+        "# plot a bar plot for each numerical feature count\n",
         "\n",
         "for col in numeric_features[:]:\n",
         "    fig = plt.figure(figsize=(9, 6))\n",
@@ -1790,7 +1790,7 @@
         "id": "jG-Uj6CViSQH",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 684
+          "height": 683
         },
         "outputId": "af25f742-e7dc-4d62-b6f0-0cff89bce536"
       },
@@ -1830,7 +1830,7 @@
         "id": "W9VaLG1AjnJp",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 684
+          "height": 683
         },
         "outputId": "b1cfd04a-773c-466a-cba0-a44c17eb7902"
       },
@@ -1870,7 +1870,7 @@
         "id": "tfXi8TenpfDj",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 684
+          "height": 683
         },
         "outputId": "eb76130e-2699-42e4-d2cb-4425e772404d"
       },
@@ -1940,7 +1940,7 @@
         "id": "-LxF6EiWpefy",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 509
+          "height": 508
         },
         "outputId": "04b79ccf-8f4e-463b-feef-57ae4f2744f8"
       },
@@ -1979,7 +1979,7 @@
         "id": "hw2QMCXSnNz4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 509
+          "height": 508
         },
         "outputId": "d74e64fe-fa77-4244-a7f7-c358f87e6cf8"
       },
@@ -2192,7 +2192,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 776
+          "height": 775
         },
         "id": "unjm390VIdr0",
         "outputId": "8275c450-ea9d-439f-806f-737f47b262e7"
